[tool.poetry]
name = "csds440-grouptemplate"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
cvxopt = "^1.2.6"
jupyterlab = "^3.1.10"
matplotlib = "^3.4.3"
numba = ">=0.53"
numpy = "^1.21.2"
pandas = "^1.3.2"
python = ">=3.7.1,<3.10"
scipy = "^1.7.1"
seaborn = "^0.11.2"
sting = {git = "ssh://git@github.com/cwru-courses/sting.git", rev = "v1.0.1"}

[tool.poetry.dev-dependencies]
black = "^21.8b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
